// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Header renders Header component 1`] = `
<div
  class="header"
>
  <div
    class="header-pokedex"
  >
    <div
      class="header-pokedex-ball"
    />
    <div
      class="header-pokedex-ball-2"
    />
    <div
      class="header-pokedex-ball-3"
    />
  </div>
  <div
    class="header-navigation"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
      />
    </svg>
    <span>
      Go back
    </span>
  </div>
</div>
`;

exports[`Component Header should render with use navigation 1`] = `
<div
  class="header-navigation"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
    />
  </svg>
  <span>
    Go back
  </span>
</div>
`;

exports[`Component Header should render without use navigation 1`] = `undefined`;

exports[`Component Header should renders balls 1`] = `
<div
  class="header-pokedex"
>
  <div
    class="header-pokedex-ball"
  />
  <div
    class="header-pokedex-ball-2"
  />
  <div
    class="header-pokedex-ball-3"
  />
</div>
`;
